Code reformatting.